--- a/2023/set-03/a-transformacao-pela-graca/package.json
+++ b/2023/set-03/a-transformacao-pela-graca/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "gulp test",
     "start": "gulp serve",
-    "build": "gulp build"
+    "build": "gulp build && tailwindcss -i ./dist/theme/ipca.css -o ./dist/twed-ipca.css",
+    "tw": "tailwindcss -i ./dist/theme/ipca.css -o ./dist/twed-ipca.css --watch"
   },
   "author": {
     "name": "Hakim El Hattab",
@@ -56,6 +57,7 @@
     "rollup": "^2.48.0",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.39.2",
+    "tailwindcss": "^3.3.3",
     "yargs": "^15.1.0"
   },
   "overrides": {
