--- a/ipca-site/fly.toml
+++ b/ipca-site/fly.toml
@@ -12,9 +12,9 @@ swap_size_mb = 512
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ["app"]
 
 [checks]
