--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy ipca-site
+      - run: flyctl deploy ipbcachoeirinha
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   
