--- a/ipbcachoeirinha/package.json
+++ b/ipbcachoeirinha/package.json
@@ -10,20 +10,20 @@
     "tw:watch": "tailwindcss -i ./app/app.css -o ./public/tailwind.css --watch"
   },
   "dependencies": {
-    "@react-router/node": "^7.5.3",
-    "@react-router/serve": "^7.5.3",
-    "isbot": "^5.1.27",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router": "^7.5.3",
+    "@react-router/node": "7.6.1",
+    "@react-router/serve": "7.6.1",
+    "isbot": "5.1.27",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-router": "7.6.1",
     "reveal.js": "5.2.1",
-    "cloudinary": "^1.40.0",
-    "adm-zip": "^0.5.10"
+    "cloudinary": "1.40.0",
+    "adm-zip": "0.5.10"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.5.3",
-    "tailwindcss": "3.4.17",
-    "vite": "^6.3.3",
-    "eslint": "^9.28.0"
+    "@react-router/dev": "7.6.1",
+    "tailwindcss": "3.4.18",
+    "vite": "6.3.6",
+    "eslint": "9.37.0"
   }
 }
