--- a/ipbcachoeirinha/package.json
+++ b/ipbcachoeirinha/package.json
@@ -10,20 +10,20 @@
     "tw:watch": "tailwindcss -i ./app/app.css -o ./public/tailwind.css --watch"
   },
   "dependencies": {
-    "@react-router/node": "7.6.1",
-    "@react-router/serve": "7.6.1",
-    "isbot": "5.1.27",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-router": "7.6.1",
+    "@react-router/node": "7.9.4",
+    "@react-router/serve": "7.9.4",
+    "isbot": "5.1.31",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-router": "7.9.4",
     "reveal.js": "5.2.1",
     "cloudinary": "1.40.0",
-    "adm-zip": "0.5.10"
+    "adm-zip": "0.5.16"
   },
   "devDependencies": {
-    "@react-router/dev": "7.6.1",
-    "tailwindcss": "3.4.18",
+    "@react-router/dev": "7.9.4",
+    "tailwindcss": "3.4.*",
     "vite": "6.3.6",
-    "eslint": "9.37.0"
+    "eslint": "9.38.0"
   }
 }
