--- a/ipbcachoeirinha/Dockerfile
+++ b/ipbcachoeirinha/Dockerfile
@@ -15,6 +15,7 @@ WORKDIR /app
 RUN bun run build
 
 FROM oven/bun:latest
+RUN apt-get update && apt-get upgrade -y && apt-get install -y nodejs
 COPY ./package.json ./bun.lock /app/
 COPY --from=production-dependencies-env /app/node_modules /app/node_modules
 COPY --from=build-env /app/build /app/build
