--- a/ipbcachoeirinha/package.json
+++ b/ipbcachoeirinha/package.json
@@ -10,20 +10,20 @@
     "tw:watch": "tailwindcss -i ./app/app.css -o ./public/tailwind.css --watch"
   },
   "dependencies": {
-    "@react-router/node": "7.9.4",
-    "@react-router/serve": "7.9.4",
+    "@react-router/node": "7.9.5",
+    "@react-router/serve": "7.9.5",
     "isbot": "5.1.31",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-router": "7.9.4",
+    "react-router": "7.9.5",
     "reveal.js": "5.2.1",
     "cloudinary": "1.41.3",
     "adm-zip": "0.5.16"
   },
   "devDependencies": {
-    "@react-router/dev": "7.9.4",
-    "tailwindcss": "3.4.*",
-    "vite": "6.3.6",
-    "eslint": "9.38.0"
+    "@react-router/dev": "7.9.5",
+    "tailwindcss": "~3.4.18",
+    "vite": "~7.1.12",
+    "eslint": "9.39.0"
   }
 }
