--- a/ipbcachoeirinha/fly.toml
+++ b/ipbcachoeirinha/fly.toml
@@ -1,30 +1,23 @@
-# fly.toml app configuration file generated for ipcachoeirinha-5690 on 2023-09-08T17:14:56-03:00
+# fly.toml app configuration file generated for liturgias on 2026-01-25T16:05:12Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "ipcachoeirinha-5690"
-primary_region = "gru"
-swap_size_mb = 512
+app = 'liturgias'
+primary_region = 'iad'
 
 [build]
 
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
-  processes = ["app"]
+  min_machines_running = 0
+  processes = ['app']
 
-[checks]
-  [checks.status]
-    port = 3000
-    type = "http"
-    interval = "10s"
-    timeout = "2s"
-    grace_period = "5s"
-    method = "GET"
-    path = "/healthcheck"
-    protocol = "http"
-    tls_skip_verify = false
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
